# evm-multicall

./: .gitignore  Cargo.toml  README.md
abi/: multicall.json
src/: chains.rs  main.rs  models.rs  tokens.rs
